[package]
name = "evm-jsontests"
version = "0.13.1"
license = "GPL-3.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
evm = { version = "0.13", path = "../evm" }
primitive-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = "2.32"
ethjson = { git = "https://github.com/paritytech/parity-ethereum", features = ["test-helpers"] }
parity-crypto = { version = "0.4.2", features = ["publickey"] }
triehash-ethereum = { git = "https://github.com/paritytech/parity-ethereum" }
ethcore-builtin = { git = "https://github.com/paritytech/parity-ethereum" }
rlp = "0.4"
sha3 = "0.8"
parity-bytes = "0.1"
